# openai-agents-tools

./: .gitignore  LICENSE  README.md  pyproject.toml
src/openai_agents_tools/: __init__.py  context.py  errors.py
src/openai_agents_tools/tools/: __init__.py
src/openai_agents_tools/tools/file/: __init__.py  glob.py  grep.py  read.py  read_media.py  replace.py  write.py
src/openai_agents_tools/tools/shell/: __init__.py  bash.md  powershell.md  shell.py
src/openai_agents_tools/tools/think/: __init__.py  think.py
src/openai_agents_tools/tools/todo/: __init__.py  todo.py
src/openai_agents_tools/tools/web/: __init__.py  fetch.py  search.py
